[package]
name = "space-packet"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = ["std"]
nightly = []
std = []

[dev-dependencies]
rand = { version = "0.9.1", features = ["small_rng"], default-features = false }

[dependencies]
zerocopy = { version = "0.8.26", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
