[package]
name = "space-packet"
description = "Rust implementation of the CCSDS Space Packet Protocol"
version = "1.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Quinten-van-Woerkom/finetime"

[features]
default = ["std"]
nightly = []
std = []

[dev-dependencies]
rand = { version = "0.9.1", features = ["small_rng"], default-features = false }

[dependencies]
thiserror = "2.0.16"
zerocopy = { version = "0.8.26", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
