[package]
name = "space-packet"
description = "Rust implementation of the CCSDS Space Packet Protocol"
version = "2.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Quinten-van-Woerkom/space-packet"

[features]
default = ["std"]
nightly = []
std = []

[dev-dependencies]
rand = { version = "0.10.1" }

[dependencies]
thiserror = "2.0.18"
zerocopy = { version = "0.8.52", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"